--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "express": "^4.12.4",
+    "hashids": "^1.0.1",
     "request": "^2.55.0",
     "validator": "^3.40.0"
   }
