--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.19.0",
+    "crypto-js": "^3.1.5",
     "express": "^4.12.4",
-    "hashids": "^1.0.1",
     "request": "^2.55.0",
     "validator": "^3.40.0"
   }
