--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "crypto-js": "^3.1.5",
-    "express": "^4.12.4",
+    "minimist": "^1.1.1",
     "request": "^2.55.0",
     "validator": "^3.40.0"
   }
